--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,15 +1,95 @@
-html {
-    font-size: 1rem;
-}
-
 * {
     margin: 0;
-    padding: 0;
+    padding: 10px;
+    color: black;
+    /*prueba */
+    border: 0px solid black;
+    /* fin prueba */
 }
+
+
+html {
+    font-size: 1rem;
+    padding: 0px;
+}
+
+
+body {
+    padding: 0px;
+}
+
+/* Para que no se vea la hamburguesa
+.menuHamburguesa {
+    display: none;
+}
+*/
+
+/*prueba */
+
+.pruebaHeader {
+    background: #03a9f4;
+}
+
+/*
+.pruebaHero {
+    background: #d22b1f;
+}
+
+.pruebaSection {
+    background: #129a22;
+}
+
+.bloqueAside {
+    background: #673ab7;
+}
+*/
+
+
+
+
+
+
+
+
+.pruebaSection {
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 0%;
+}
+
+
+
+/* Nota: ayuda reutilizable para que los elementos no superen los 1200px (convertidos a rem) y si la pantalla es mas grande para que queden centrados. Esto hace que sea mas comoda la lectura en pantallas muy anchas. 
+*/
+.redondeoVisual {
+    margin: auto;
+    max-width: 75rem;
+}
+
+
+/* fin prueba */
+
+
+
+
+
+
+
+
+
+
+
+
 
 body {
     background-color: white;
+
     font-family: 'Roboto', sans-serif;
+}
+
+/* Los H1 dentro de una sección tienen un tamaño predeterminado de 1.5em que es distinto al predeterminado fuera de un section (2em). Por eso lo fuerzo aqui */
+h1 {
+    font-size: 2em;
 }
 
 h1,
@@ -29,32 +109,51 @@ a {
 /* HEADER */
 
 .cabecera {
-    /*position: sticky;*/
+    position: sticky;
     top: 0px;
-    width: 100%;
+    /*align-items: center;*/
+    display: flex;
+    /*margin: 2em;*/
+    background-color: rgb(47, 47, 161);
+    padding: 0px;
 }
 
 .cabeceraLogo {
-    display: inline-block;
+    /* display: inline-block;*/
+    flex: 1;
+
+
 }
 
 
 .cabeceraLogo img {
-    width: 100px;
+    height: 50px;
 }
 
+/*
+.menuHamburguesa {
+    display: inline-block;
+    vertical-align: middle;
+    
+    display: none;
+    justify-content: center;
+    align-items: center;
+
+} */
+
+.menuHamburguesa img {
+    height: 30px;
+}
 
 nav {
-    background-color: rgb(47, 47, 161);
-    height: 60px;
+    flex: 1;
 }
 
 
-nav ul li {
-    display: inline;
+nav ul {
+    display: flex;
+    justify-content: space-around;
     list-style-type: none;
-    padding: 0 20px;
-    margin: 0 20px;
 
 }
 
@@ -62,7 +161,6 @@ nav ul li {
 /* HERO */
 
 .imagenPrincipal {
-    width: 100%;
     height: 85vh;
     background-image: url(../images/aplicacion3.jpg);
     background-repeat: no-repeat;
@@ -92,14 +190,95 @@ h1 {
 }
 
 
-/* PIE */
+/* ------- ASIDE ------- */
 
-footer {
-    background-color: rgb(70, 70, 75);
-    color: white;
-    text-align: center;
+aside img {
+    max-width: 100%;
+    height: auto;
+    padding: 0px;
+    margin-bottom: 30px;
+}
+
+aside {
+    flex-grow: 0;
+    flex-shrink: 1;
+    flex-basis: 25%;
+    /* Nota: Es lo mismo poner flex: 0 1 25%; */
     padding: 30px;
 }
+
+.bloqueAside img {}
+
+.bloqueAside p {
+    text-align: justify;
+    padding: 0px;
+}
+
+/* ------- FIN ASIDE ------- */
+
+
+/* ------- PIE ------- */
+
+footer {
+    background-color: #616161;
+    text-align: center;
+    padding: 60px;
+}
+
+.footerGrid {
+    display: grid;
+    justify-items: center;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+.footerGrid section {
+    max-width: 530px;
+}
+
+.formasContacto form {
+    vertical-align: top;
+    padding: 0px;
+}
+
+.formasContacto div {
+    overflow-wrap: anywhere;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.formasContacto h1 {
+    font-size: 2.4em;
+    text-align: center;
+    margin: 0px;
+    padding: 10px 0px 30px;
+}
+
+.formasContacto img {
+    height: 40px;
+    padding: 0px;
+}
+
+.formasContacto a {
+    color: black;
+}
+
+/* ------- FIN PIE ------- */
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* TABLAS*/
@@ -139,6 +318,10 @@ table tr td {
 
 }
 
+#emailSuscripcion {
+    text-align: center;
+}
+
 input {
     width: 100%;
     padding: 12px 20px;
@@ -166,4 +349,48 @@ input[type=submit] {
     padding: 14px 20px;
     margin: 8px 0;
     border-radius: 4px;
+}
+
+
+
+/* MEDIA-QUERY: Vista Desktop - Oculta Menu Hamburguesa, Muestra Menu Completo */
+@media screen and (min-width: 820px) {
+    .menuHamburguesa {
+        display: none;
+    }
+}
+
+
+/* VISTA TABLET y MOBILE (Muestra Hamburguesa). Achica la tipografía del Newsletter */
+@media screen and (max-width: 820px) {
+    .menuCompleto {
+        display: none;
+    }
+
+    .menuHamburguesa {
+        display: flex;
+    }
+
+    .formasContacto h1 {
+        font-size: 2em;
+    }
+
+}
+
+
+/* VISTA MOBILE. Achica más la tipografía del Newsletter */
+@media screen and (max-width: 640px) {
+    .formasContacto h1 {
+        font-size: 1.5em;
+    }
+}
+
+
+/* VISTA MOBILE (lleva el Aside hacia abajo) */
+@media screen and (min-width: 640px) {
+    .contenedorFlex {
+        display: flex;
+    }
+
+
 }
