--- a/styles/styles.css
+++ b/styles/styles.css
@@ -111,6 +111,8 @@ h1 {
     text-align: justify;
     margin: 20px 0px;
     padding: 0px 30px;
+    text-align: center;
+
 }
 
 /* ------- FIN TITULO ------- */
@@ -155,6 +157,46 @@ h1 {
     margin-left: auto;
     margin-right: auto;
 }
+
+
+/*   Planes   */
+#planes-contenedor {
+    padding: 50px;
+}
+
+.planes-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    text-align: center;
+    grid-auto-rows: auto;
+    grid-gap: 25px;
+}
+
+
+section {
+    padding: 20px;
+}
+
+section .planes {
+    /* Sombra y bordes redondeados*/
+    background-color: #f8f8f8;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+        rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    border-radius: 6px;
+}
+
+section h4 {
+    font-size: 1.3rem;
+    color: rgb(47, 47, 161);
+    padding-bottom: 20px;
+}
+
+/* Fin Planes */
+
+
+
+
+
 
 /* ------- FIN DESCRIPCION ------- */
 
