--- a/styles/styles.css
+++ b/styles/styles.css
@@ -172,6 +172,11 @@ h1 {
     grid-gap: 25px;
 }
 
+@media (max-width: 1024px) {
+    .planes-grid {
+        padding-left: 0px;
+    }
+}
 
 section {
     padding: 20px;
