Todo el Sitio con SASS II + SEO

--- a/styles/scss/_almedio.scss
+++ b/styles/scss/_almedio.scss
@@ -35,6 +35,29 @@
 
 
 
+/* Sombra y bordes redondeados de cajas*/
+@mixin cajasCopadas($colorFondo, $tamanio, $redondeoEsquina) {
+
+    background-color: $colorFondo;
+
+    @if $tamanio==grande {
+        box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+            rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+    }
+
+    @else {
+        //chico
+        box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    }
+
+    border-radius: $redondeoEsquina;
+
+}
+
+
+
+
+
 /* --------- PLANES --------- */
 #planes-contenedor {
     padding: 50px;
@@ -53,9 +76,7 @@ section {
 
     .planes {
         /* Sombra y bordes redondeados*/
-        background-color: #f8f8f8;
-        box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
-        border-radius: 6px;
+        @include cajasCopadas(#f8f8f8, grande, 10px)
     }
 
     h4 {
@@ -91,9 +112,7 @@ section {
 section {
     .testimonios {
         /* Sombra y bordes redondeados*/
-        background-color: white;
-        box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-        border-radius: 6px;
+        @include cajasCopadas(white, chico, 6px);
     }
 
     h2 {
@@ -105,11 +124,6 @@ section {
 
 
 /* ------ FIN TESTIMONIOS ------ */
-
-
-
-
-
 
 
 
