--- a/styles/styles.css
+++ b/styles/styles.css
@@ -66,20 +66,7 @@ a {
     transform: skewX(-20deg); } }
 
 /* Remover bordes del menu hamburguesa */
-.navbar-toggler {
-  outline: none;
-  box-shadow: none;
-  border: none; }
-  .navbar-toggler:focus {
-    outline: none;
-    box-shadow: none;
-    border: none; }
-  .navbar-toggler:active {
-    outline: none;
-    box-shadow: none;
-    border: none; }
-
-.navbar-toggler-icon:focus {
+.sinBordes, .navbar-toggler, .navbar-toggler:focus, .navbar-toggler:active, .navbar-toggler-icon:focus {
   outline: none;
   box-shadow: none;
   border: none; }
@@ -100,7 +87,7 @@ a {
 /* --------- HERO --------- */
 .imagenPrincipal {
   height: 85vh;
-  background-image: url(../images/aplicacion4.jpg);
+  background-image: url(../images/aplicacion4.webp);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center; }
@@ -138,6 +125,7 @@ h1 {
     margin-right: auto; }
 
 /* ------- FIN DESCRIPCION ------- */
+/* Sombra y bordes redondeados de cajas*/
 /* --------- PLANES --------- */
 #planes-contenedor {
   padding: 50px; }
@@ -155,7 +143,7 @@ section {
     /* Sombra y bordes redondeados*/
     background-color: #f8f8f8;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
-    border-radius: 6px; }
+    border-radius: 10px; }
   section h4 {
     font-size: 1.3rem;
     color: #2f2fa1;
