Tercera Entrega del Proyecto Final

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -113,9 +113,9 @@ a {
     padding: 0px;
 }
 
-.carousel-item {
-    height: 300px;
-}
+/* .carousel-item {
+    height: 89vh;
+} */
 
 /* ----- FIN CONFIGURACIONES CAROUSEL ----- */
 
