--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,6 +30,9 @@ h6 {
 /* Nota: Los H1 dentro de un Section tienen un tamaño predeterminado de 1.5em que es distinto al predeterminado fuera de un Section (2em). Por eso lo fuerzo aqui */
 h1 {
     font-size: 2em;
+    margin: 20px 0px;
+    padding: 20px 30px;
+    text-align: center;
 }
 
 a {
@@ -68,22 +71,11 @@ a {
 }
 
 
-.animacionLogo {
+.elLogo {
     width: 180px;
-    /* animation: skew 2s infinite;
-    transform: skewX(20deg);
-    animation-direction: alternate; */
 }
 
-@keyframes skew {
-    0% {
-        transform: skewX(20deg);
-    }
 
-    100% {
-        transform: skewX(-20deg);
-    }
-}
 
 /* Remover bordes del menu hamburguesa */
 .navbar-toggler,
@@ -154,34 +146,6 @@ a {
 
 
 
-/* --------- TITULO --------- */
-/* 
-.tituloPagina {
-    background: #2471A3;
-    border: 0px solid #e1e1e1;
-    padding: 0px 0px;
-}
-
-.tituloPagina h1 {
-    margin: 0px;
-    padding: 40px;
-    text-align: center;
-    color: white;
-}
- */
-
-h1 {
-    margin: 20px 0px;
-    padding: 20px 30px;
-    text-align: center;
-
-}
-
-/* ------- FIN TITULO ------- */
-
-
-
-
 
 /* --------- DESCRIPCION --------- */
 
@@ -227,8 +191,6 @@ section h3 {
     padding-top: 20px;
     padding-bottom: 0px;
 }
-
-
 
 /* ------- FIN DESCRIPCION ------- */
 
@@ -443,7 +405,7 @@ footer {
     transition: 0.2s;
 }
 
-.formasContacto h1 {
+.formasContacto h5 {
     font-size: 2.4em;
     text-align: center;
     margin: 0px;
@@ -496,12 +458,11 @@ footer {
 @media screen and (max-width: 990px) {
     .navbar {
         padding: 20px 70px;
-        /* border-bottom: 1px solid #D5D8DC; */
         box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
         transition-duration: 0.6s;
     }
 
-    .formasContacto h1 {
+    .formasContacto h5 {
         font-size: 2em;
     }
 }
@@ -509,7 +470,7 @@ footer {
 
 /* Vista Mobile: Achica más la tipografía del Newsletter, El h3 del aside (si hay) en queda sin top padding para que no haya gran espacio en blanco cuando los bloques están apilados (descripcion y aside). Achica el Padding del logo y menu en el Navbar para que se vea mejor en mobile*/
 @media screen and (max-width: 640px) {
-    .formasContacto h1 {
+    .formasContacto h5 {
         font-size: 1.5em;
     }
 
@@ -519,7 +480,6 @@ footer {
 
     .navbar {
         padding: 20px 30px;
-        /* border-bottom: 1px solid #D5D8DC; */
         box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
         transition-duration: 0.6s;
     }
